Fix requested change